--- a/css/basic.css
+++ b/css/basic.css
@@ -70,13 +70,24 @@ body {
 }
 
 .advance-area {
-	display: none;
+	/*display: none;*/
 	padding: 10px 15px 2px 15px;
 	font-size: 14px;
+	line-height: 2.5;
 }
 
-.filter {
-	padding-bottom: 10px;
+.filter ul {
+    list-style: none;
+    margin: 0 0 0 20px;
+    padding-left: 0;
+    line-height: 2.1;
+}
+.filter ul li {
+	padding-right: 10px;
+}
+
+.filter ul li span {
+	padding-right: 15px;
 }
 
 .results {
@@ -186,7 +197,7 @@ textarea {
 }
 
 .table thead th {
-    background-color: rgb(9, 187, 7);
+    background-color: rgb(60, 141, 188);
     color: #fff;
     border-bottom-width: 0;
 }
