--- a/css/basic.css
+++ b/css/basic.css
@@ -2,6 +2,24 @@ body {
 	margin: 0px;
 }
 
+.box {
+    width: 400px;
+    height: 220px;
+    background-color: #f5f5f5;
+    box-shadow: 0px 0px 10px;
+    margin: auto;
+    margin-top: 200px;
+    padding-top: 15px;
+    line-height: 3;
+    text-align: center;
+}
+
+.user {
+    float: right;
+    margin: 14px 25px;
+    color: white;
+}
+
 .page {
 	display: none;
 }
